--- a/fly.toml
+++ b/fly.toml
@@ -5,6 +5,9 @@
 
 app = "dcreactivities"
 primary_region = "atl"
+kill_signal = "SIGINT"
+kill_timeout = 5
+processes = []
 
 [build]
   image = "dustinc027/reactivities:latest"
@@ -14,10 +17,32 @@ primary_region = "atl"
   Cloudinary__CloudName="dpseikuqn"
   Cloudinary__ApiKey="822448657549684"
 
-[http_service]
+[experimental]
+  allowed_public_ports = []
+  auto_rollback = true
+
+[[services]]
+  http_checks = []
   internal_port = 8080
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
+  protocol = "tcp"
+  script_checks = []
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "connections"
+
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
